[package]
name = "cdnbuster"
version = "0.1.0"
edition = "2021"

[dependencies]
# quinn is only necessary to set the runtime-tokio feature, see https://github.com/hyperium/h3/pull/185
quinn = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "ring"] }
reqwest = { version = "0.11.17", features = ["rustls-tls", "http3"] }
tokio = { version = "1.28.1", features = ["full"] }
